fix: align index

--- a/styles/style-index.css
+++ b/styles/style-index.css
@@ -122,6 +122,8 @@ body {
   width: 100%;
   flex-direction: column;
   gap: 20px;
+  justify-content: center;
+  align-items: center;
 }
 
 .contentContainer {
@@ -131,11 +133,11 @@ body {
   background-color: #ff7b57;
 
   padding: 0px 20px 0px 20px;
-  margin: 0px 30px 0px 30px;
 
   gap: 5px;
 
   text-align: center;
+  width: 300px;
 
   border: 2px solid #fff;
   border-radius: 12px;
